# Spotify-Agent

./: .env.example  .gitignore  main_catalog.py  pyproject.toml
config/: settings.py
src/: spotify_client.py
src/agents/: classifier_agent.py
src/utils/: helpers.py
