[project]
name = "spotify-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "faiss-gpu>=1.14.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
]
